hphp/test/slow/traits/require_constraint_iface_trait_error.php.expectf
Fatal error: Class 'C' required to extend class 'Super' by interface 'I1' in %s/slow/traits/require_constraint_iface_trait_error.php on line 22
